--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -15,12 +15,13 @@
   url       = {https://users.cs.utah.edu/~ald/pubs/interrupts.pdf}
 }
 
-@misc{fdio_what_is_vpp,
-  author       = {FD.io},
-  title        = {What is VPP?},
-  year         = {2025},
-  howpublished = {\url{https://wiki.fd.io/view/VPP/What\_is\_VPP\%3F}},
-  note         = {Accessed: 2025-04-07}
+
+@online{fdio_what_is_vpp,
+  author    = {FD.io},
+  title     = {What is VPP?},
+  year      = {2025},
+  url       = {https://wiki.fd.io/view/VPP/What_is_VPP%3F},
+  urldate   = {2025-04-07}
 }
 
 @article{LINGUAGLOSSA,
@@ -51,29 +52,28 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   month = dec
 }
 
-
-@misc{fdio_vpp_extensible_2021,
-  author       = {{FD.io}},
-  title        = {Extensible: VPP and its plugin architecture},
-  year         = {2021},
-  howpublished = {\url{https://fd.io/docs/vpp/v2101/whatisvpp/extensible}},
-  note         = {Accessed: 2025-04-10}
+@online{fdio_vpp_extensible_2021,
+  author    = {{FD.io}},
+  title     = {Extensible: VPP and its plugin architecture},
+  year      = {2021},
+  url       = {https://fd.io/docs/vpp/v2101/whatisvpp/extensible},
+  urldate   = {2025-04-10}
 }
 
-@misc{dpdk_about,
-  author       = {{DPDK Project}},
-  title        = {{About DPDK}},
-  howpublished = {\url{https://www.dpdk.org/about/}},
-  year         = {2025},
-  note         = {Accessed: 2025-04-13}
+@online{dpdk_about,
+  author    = {{DPDK Project}},
+  title     = {About DPDK},
+  year      = {2025},
+  url       = {https://www.dpdk.org/about/},
+  urldate   = {2025-04-13}
 }
 
-@misc{dpdk-supported-nics,
-  author       = {{DPDK Project}},
-  title        = {Supported NICs},
-  howpublished = {\url{https://core.dpdk.org/supported/nics/}},
-  year         = {2024},
-  note         = {Accessed: 2025-04-20}
+@online{dpdk-supported-nics,
+  author    = {{DPDK Project}},
+  title     = {Supported NICs},
+  year      = {2024},
+  url       = {https://core.dpdk.org/supported/nics/},
+  urldate   = {2025-04-20}
 }
 
 @article{burakov2019memory,
@@ -95,28 +95,28 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
       url={https://arxiv.org/abs/2408.01013}, 
 }
 
-@misc{linux-rss,
-  author       = {Linux Kernel Documentation},
-  title        = {Scaling in the Linux Networking Stack},
-  year         = {2023},
-  howpublished = {\url{https://docs.kernel.org/networking/scaling.html}},
-  note         = {Accessed: 2025-04-19}
+@online{linux-rss,
+  author    = {Linux Kernel Documentation},
+  title     = {Scaling in the Linux Networking Stack},
+  year      = {2023},
+  url       = {https://docs.kernel.org/networking/scaling.html},
+  urldate   = {2025-04-19}
 }
 
-@misc{intel-core-utilization-2025,
-  author       = {{Intel Corporation}},
-  title        = {Core Utilization in DPDK Applications},
-  year         = {2024},
-  howpublished = {\url{https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/core-utilization-in-dpdk-apps.html}},
-  note         = {Accessed: 2025-04-19}
+@online{intel-core-utilization-2025,
+  author    = {{Intel Corporation}},
+  title     = {Core Utilization in DPDK Applications},
+  year      = {2024},
+  url       = {https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/core-utilization-in-dpdk-apps.html},
+  urldate   = {2025-04-19}
 }
 
-@misc{intel-pcie-traffic-2025,
-  author       = {{Intel Corporation}},
-  title        = {PCIe Traffic in DPDK Applications},
-  year         = {2024},
-  howpublished = {\url{https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/pcie-traffic-in-dpdk-apps.html}},
-  note         = {Accessed: 2025-04-19}
+@online{intel-pcie-traffic-2025,
+  author    = {{Intel Corporation}},
+  title     = {PCIe Traffic in DPDK Applications},
+  year      = {2024},
+  url       = {https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/pcie-traffic-in-dpdk-apps.html},
+  urldate   = {2025-04-19}
 }
 
 @online{fdio-vpp-softwarearchitecture-2506,
@@ -124,7 +124,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {VPP Software Architecture},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/softwarearchitecture.html},
-  note      = {Accessed: 2025-04-21}
+  urldate   = {2025-04-21}
 }
 
 @online{fdio-vpp-infrastructure-2506,
@@ -132,7 +132,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {VPP Infrastructure Layer},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/infrastructure.html},
-  note      = {Accessed: 2025-04-21}
+  urldate   = {2025-04-21}
 }
 
 @online{fdio-vpp-vnet-2506,
@@ -140,7 +140,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title        = {VNET - VPP Network Stack},
   year         = {2025},
   url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/vnet.html},
-  note         = {Accessed: 2025-04-21}
+  urldate      = {2025-04-21}
 }
 
 @online{fdio-vpp-featurearcs-2506,
@@ -148,7 +148,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title        = {Feature Arcs},
   year         = {2025},
   url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/featurearcs.html},
-  note         = {Accessed: 2025-04-21}
+  urldate      = {2025-04-21}
 }
 
 @online{fdio-vpp-vlib-2506,
@@ -156,7 +156,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   year         = {2025},
   organization = {FD.io Project},
   url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/vlib.html},
-  note         = {Accessed: 2025-04-21}
+  urldate      = {2025-04-21}
 }
 
 @online{fdio-vpp-plugins-2506,
@@ -180,7 +180,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Supported Architectures and Operating Systems},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/aboutvpp/supported.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-packagecloud,
@@ -188,7 +188,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {FD.io release package repository on Packagecloud.io},
   year      = {2025},
   url       = {https://packagecloud.io/fdio},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-building-guide,
@@ -196,7 +196,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Building VPP},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/developer/build-run-debug/building.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-running,
@@ -204,7 +204,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Running VPP},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/gettingstarted/running/index.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{dpdk-linux-drivers,
@@ -212,7 +212,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Linux Drivers},
   year      = {2025},
   url       = {https://doc.dpdk.org/guides/linux_gsg/linux_drivers.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-config-getting-started,
@@ -220,7 +220,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Getting Started with the Configuration},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/configuration/config_getting_started.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-config-reference,
@@ -228,7 +228,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Configuration Reference},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/configuration/reference.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @online{fdio-multithreading,
@@ -236,7 +236,7 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   title     = {Multi-threading in VPP},
   year      = {2025},
   url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/multi_thread.html},
-  note      = {Accessed: 2025-05-03}
+  urldate   = {2025-05-03}
 }
 
 @article{FREITAS2022148,
@@ -303,12 +303,12 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   doi={10.1109/TELFOR63250.2024.10819057}
 }
 
-@misc{fdio-vpp-features-2502,
-  author       = {{FD.io Project}},
-  title        = {VPP Feature List – FD.io Documentation (Release 25.02)},
-  year         = {2025},
-  url          = {https://s3-docs.fd.io/vpp/25.02/aboutvpp/featurelist.html},
-  note         = {Accessed: 2025-04-15}
+@online{fdio-vpp-features-2502,
+  author    = {{FD.io Project}},
+  title     = {VPP Feature List – FD.io Documentation (Release 25.02)},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.02/aboutvpp/featurelist.html},
+  urldate   = {2025-04-15}
 }
 
 @article{traffic-generators,
@@ -330,28 +330,28 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   keywords = {Network, packet, traffic, workload, generator, experiment, survey, analysis}
 }
 
-@misc{iperf,
-  author = {The iPerf Team},
-  title = {iPerf - The Network Testing Tool},
-  year = {2025},
-  url = {https://iperf.fr/},
-  note = {Accessed: 2025-04-16}
-}  
-
-@misc{trex,
-  author = {Cisco Systems, Inc.},
-  title = {TRex - Traffic Generator},
-  year = {2025},
-  url = {https://trex-tgn.cisco.com/},
-  note = {Accessed: 2025-04-16}
+@online{iperf,
+  author    = {The iPerf Team},
+  title     = {iPerf - The Network Testing Tool},
+  year      = {2025},
+  url       = {https://iperf.fr/},
+  urldate   = {2025-04-16}
 }
 
-@misc{pktgen_dpdk,
-  author       = {DPDK Project},
-  title        = {Pktgen-DPDK},
-  howpublished = {\url{https://pktgen-dpdk.readthedocs.io/}},
-  year         = {2025},
-  note         = {Accessed: 2025-04-16}
+@online{trex,
+  author    = {Cisco Systems, Inc.},
+  title     = {TRex - Traffic Generator},
+  year      = {2025},
+  url       = {https://trex-tgn.cisco.com/},
+  urldate   = {2025-04-16}
+}
+
+@online{pktgen_dpdk,
+  author    = {DPDK Project},
+  title     = {Pktgen-DPDK},
+  year      = {2025},
+  url       = {https://pktgen-dpdk.readthedocs.io/},
+  urldate   = {2025-04-16}
 }
 
 @manual{DITGManual,
