Populate tables part1

--- a/text/text.tex
+++ b/text/text.tex
@@ -76,6 +76,8 @@ The Practical part describes the testing infrastructure, presents the results of
 \section{Test Scenarios \& Results}
 %---------------------------------------------------------------
 \input{text/chapters/measurement.tex}
+\input{text/chapters/measurement2.tex}
+
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
