--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -108,6 +108,27 @@
 %\usepackage{minted}
 \usepackage{csquotes}
 
+\usepackage{graphicx}  
+\usepackage{multirow}
+
+
+\lstset{
+  language=Python,
+  breaklines=true,            
+  breakatwhitespace=true,
+  basicstyle=\ttfamily\small,
+  keywordstyle=\color{blue},
+  commentstyle=\color{gray},
+  stringstyle=\color{orange},
+  showstringspaces=false,
+  numbers=left,
+  numberstyle=\tiny,
+  stepnumber=1,
+  frame=single,
+  captionpos=b
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%
 % DEMO CONTENTS SETTINGS END
 %%%%%%%%%%%%%%%%%%%%%%
