--- a/text/text.tex
+++ b/text/text.tex
@@ -16,7 +16,7 @@ Vector Packet Processing (VPP) is a high-performance network stack that operates
 It was originally developed by Cisco Systems, Inc. (which is a world leader in networking) and open-sourced in 2016 under the Fast Data Project (FD.io), that is part of the Linux Foundation.
 VPP brings the ability to perform efficient, high-speed packet processing on common off-the-shelf (COTS) hardware, across a wide range of platforms and operating systems.
 Its open and flexible architecture opens the door to a new class of network applications that can be deployed and scaled more easily than traditional hardware appliances. 
-In this way, VPP could represent a shift in the traditionally conservative networking world, echoing the "Mainframe to PC" revolution, 
+In this way, VPP could represent a shift in the traditionally conservative networking world, echoing the ‘‘Mainframe to PC’’ revolution, 
 where general-purpose systems replaced proprietary platforms, enabling broader innovation and accessibility.
 
 Since VPP was open-sourced only recently, it has not yet been widely adopted by the market, and there are only a limited number of academic studies on the subject. As a result, this area remains underexplored. 
@@ -77,11 +77,12 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 \input{text/chapters/measurement.tex}
 \input{text/chapters/measurement2.tex}
+\input{text/chapters/measurement3.tex}
 
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
-\section{Presentation and Analysis of Results}
+\section{Presentation and Analysis of Results -> do závěru?}
 %---------------------------------------------------------------
 
 
