--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -183,6 +183,10 @@ documentation thereof (hereinafter collectively referred to as the "Work"), to a
 who wish to use the Work. Such persons are entitled to use the Work in any manner that does not
 diminish the value of the Work and for any purpose (including use for profit). This authorisation is
 unlimited in time, territory and quantity.
+
+I declare that I have used AI tools during the preparation and writing of my thesis. I have verified
+the generated content. I confirm that I am aware that I am fully responsible for the content of the
+thesis.
 \end{declarationpage}
 %%%%%%%%%%%%%%%%%%%
 % DECLARATION END
