--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -53,9 +53,9 @@
 \ctufityear{2025} % replace with the year of your defence
 \ctufitdeclarationplace{Prague} % replace with the place where you sign the declaration
 \ctufitdeclarationdate{\today} % replace with the date of signature of the declaration
-\ctufitabstractCZE{Fill in the abstract of this thesis in Czech. Lorem ipsum dolor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue.}
-\ctufitabstractENG{Fill in the abstract of this thesis in English. Lorem ipsum dolor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue.}
-\ctufitkeywordsCZE{enter, comma, separated, list, of, keywords, in, CZECH}
+\ctufitabstractCZE{Tato bakalářská práce se zabývá efektivitou a využitím frameworku Vector Packet Processing (VPP) ve vysokorychlostních sítích. Cílem je experimentálně porovnat jeho výkon při zpracování síťových paketů s tradičním síťovým stackem v jádře operačního systému. Práce nejprve představuje teoretické základy VPP a popisuje jeho architekturu. V praktické části jsou navrženy a realizovány testovací scénáře pro porovnání obou řešení. Výsledky ukazují, že VPP dosahuje výrazně vyšší propustnosti, a zároveň i nižší latence a lepší energetické efektivity, zejména při vyšších přenosových rychlostech.}
+\ctufitabstractENG{This bachelor’s thesis focuses on the efficiency and utilization of the Vector Packet Processing (VPP) framework in high-speed networks. The aim is to experimentally compare its packet processing performance with the traditional kernel-based networking stack. The thesis first introduces the theoretical foundations of VPP and its architecture. In the practical part, test scenarios are designed and executed to evaluate and compare both solutions. The results show that VPP achieves significantly higher throughput, along with lower latency and better energy efficiency, particularly at higher transmission speeds.}
+\ctufitkeywordsCZE{vector packet processing, data plane development kit, síťové měření, energetická efektivita, síťový stack Linuxu}
 \ctufitkeywordsENG{vector packet processing, data plane development kit, network benchmark, energy efficiency, Linux network stack}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % END FILL IN
