expand bidirectional section

--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -264,6 +264,7 @@ L2 & Layer 2 (Data Link Layer)\\
 L3 & Layer 3 (Network Layer)\\
 L4 & Layer 4 (Transport Layer)\\
 Linux & Linux kernel network stack\\
+LTS & Long Term Support\\
 MTU & Maximum Transmission Unit\\
 NAT & Network Address Translation\\
 NFV & Network Function Virtualization\\
