--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -381,6 +381,18 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note      = {Brožovaná, 604 stran, 175 x 250 mm}
 }
 
+@ARTICLE{802.3,
+  author={},
+  journal={IEEE Std 802.3-2022 (Revision of IEEE Std 802.3-2018)}, 
+  title={IEEE Standard for Ethernet}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-7025},
+  keywords={IEEE Standards;Standards;IEEE 802.3 Standard;EPON;Optical fiber LAN;Physical layer;Optical fiber cables;2.5 Gigabit Ethernet;5 Gigabit Ethernet;10 Gigabit Ethernet;25 Gigabit Ethernet;40 Gigabit Ethernet;50 Gigabit Ethernet;100 Gigabit Ethernet;200 Gigabit Ethernet;400 Gigabit Ethernet;AN;attachment unit interface;AUI;Auto-Negotiation;Backplane Ethernet;balanced cable;data processing;DTE Power via the MDI;EEE;Energy-Efficient Ethernet;EPoC;EPON;EPON protocol over coax;Ethernet;Ethernet in the first mile;Ethernet Passive Optical Network;express traffic;Fast Ethernet;FEC;forward error correction;Gigabit Ethernet;IEEE 802.3;information exchange;isolation;LAN;local area network;management;MCRS;MDI;media independent interface;medium dependent interface;MIB;MII;MMF;MPCP;Multi-Channel Reconciliation Sublayer;multimode fiber;multipoint control protocol;P2MP;PCS;PD;PHY;physical coding sublayer;Physical Layer;Physical Layer Collision Avoidance;Physical Layer device;physical medium attachment;physical medium dependent;PLCA;PMA;PMD;PoDL;PoE;point to multipoint;Power over Data Lines;Power over Ethernet;Power Sourcing Equipment;Powered Device;PSE;reconciliation sublayer;repeater;RS;single-mode fiber;SMF;type field},
+  doi={10.1109/IEEESTD.2022.9844436}
+}
+
 
 
 
