--- a/text/text.tex
+++ b/text/text.tex
@@ -11,7 +11,7 @@
 %\end{chapterabstract}
 
 Modern high-performance network devices are usually proprietary systems that combine custom hardware, specialized operating systems, and tightly coupled software. 
-While these solutions offer high throughput and reliability, they are typically expensive, inflexible, and slower to evolve due to their closed design and development model.
+While these solutions offer high throughput and re\-li\-a\-bi\-li\-ty, they are typically expensive, inflexible, and slower to evolve due to their closed design and development model.
 Vector Packet Processing (VPP) is a high-performance network stack that operates at layers 2 to 4 of the ISO/OSI model. 
 It was originally developed by Cisco Systems, Inc. (which is a world leader in networking) and open-sourced in 2016 under the Fast Data Project (FD.io), that is part of the Linux Foundation.
 VPP brings the ability to perform efficient, high-speed packet processing on common off-the-shelf (COTS) hardware, across a wide range of platforms and operating systems.
@@ -85,6 +85,7 @@ The Practical part describes the testing infrastructure, presents the results of
 
 %---------------------------------------------------------------
 \section{Presentation and Analysis of Results -> do závěru?}
+\input{text/chapters/analysis.tex}
 %---------------------------------------------------------------
 
 
