--- a/text/appendix.tex
+++ b/text/appendix.tex
@@ -24,7 +24,8 @@ class STLS1(object):
         vm = STLScVmRaw([
             STLVmFlowVar("ip_src", min_value="10.0.0.1", max_value="10.255.255.255", size=4, step=1, op="inc"),
             STLVmWrFlowVar(fv_name="ip_src", pkt_offset="IP.src"),
-            STLVmFixIpv4(offset="IP")
+            STLVmFixIpv4(offset="IP") # Fix IPv4 header checksum
+ 	    STLVmFixChecksumHw(l3_offset="IP", l4_offset="UDP", l4_type=17) # Fix UDP checksum
         ], cache_size=self.cache_size)
 
         pkt = STLPktBuilder(pkt=base_pkt/pad, vm=vm)
