--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -53,8 +53,10 @@
 \ctufityear{2025} % replace with the year of your defence
 \ctufitdeclarationplace{Prague} % replace with the place where you sign the declaration
 \ctufitdeclarationdate{\today} % replace with the date of signature of the declaration
-\ctufitabstractCZE{Tato bakalářská práce se zabývá efektivitou a využitím frameworku Vector Packet Processing (VPP) ve vysokorychlostních sítích. Cílem je experimentálně porovnat jeho výkon při zpracování síťových paketů s tradičním síťovým stackem v jádře operačního systému. Práce nejprve představuje teoretické základy VPP a popisuje jeho architekturu. V praktické části jsou navrženy a realizovány testovací scénáře pro porovnání obou řešení. Výsledky ukazují, že VPP dosahuje výrazně vyšší propustnosti, a zároveň i nižší latence a lepší energetické efektivity, zejména při vyšších přenosových rychlostech.}
-\ctufitabstractENG{This bachelor’s thesis focuses on the efficiency and utilization of the Vector Packet Processing (VPP) framework in high-speed networks. The aim is to experimentally compare its packet processing performance with the traditional kernel-based networking stack. The thesis first introduces the theoretical foundations of VPP and its architecture. In the practical part, test scenarios are designed and executed to evaluate and compare both solutions. The results show that VPP achieves significantly higher throughput, along with lower latency and better energy efficiency, particularly at higher transmission speeds.}
+\ctufitabstractCZE{Tato bakalářská práce se zabývá efektivitou a využitím frameworku Vector Packet Processing (VPP) ve vysokorychlostních sítích. Cílem je experimentálně porovnat jeho výkon při zpracování síťových paketů s tradičním síťovým stackem v jádře operačního systému. Práce nejprve představuje teoretické základy VPP a popisuje jeho architekturu. V praktické části jsou navrženy a realizovány testovací scénáře pro porovnání obou řešení. 
+Výsledky ukazují, že VPP dosahuje vyšší propustnosti a nižší latence při vyšších přenosových rychlostech, přičemž energetická efektivita se liší v závislosti na objemu provozu a použité konfiguraci.}
+\ctufitabstractENG{This bachelor’s thesis focuses on the efficiency and utilization of the Vector Packet Processing (VPP) framework in high-speed networks. The aim is to experimentally compare its packet processing performance with the traditional kernel-based networking stack. The thesis first introduces the theoretical foundations of VPP and its architecture. In the practical part, test scenarios are designed and executed to evaluate and compare both solutions. 
+The results show that VPP achieves higher throughput and lower latency at higher transmission speeds, with energy efficiency varying depending on traffic volume and configuration.}
 \ctufitkeywordsCZE{vector packet processing, data plane development kit, síťové měření, energetická efektivita, síťový stack Linuxu}
 \ctufitkeywordsENG{vector packet processing, data plane development kit, network benchmark, energy efficiency, Linux network stack}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -179,7 +181,7 @@ I acknowledge that my thesis is subject to the rights and obligations stipulated
 121/2000 Coll., the Copyright Act, as amended. In accordance with Section 2373(2) of Act No.
 89/2012 Coll., the Civil Code, as amended, I hereby grant a non-exclusive authorization (licence) to
 utilize this thesis, including all computer programs that are part of it or attached to it and all
-documentation thereof (hereinafter collectively referred to as the "Work"), to any and all persons
+documentation thereof (hereinafter collectively referred to as the ``Work''), to any and all persons
 who wish to use the Work. Such persons are entitled to use the Work in any manner that does not
 diminish the value of the Work and for any purpose (including use for profit). This authorisation is
 unlimited in time, territory and quantity.
