--- a/text/text.tex
+++ b/text/text.tex
@@ -33,7 +33,6 @@ Therefore, it is crucial to explore technologies like VPP that are capable to ha
 
 This thesis is divided into two parts: Theoretical and Practical. 
 The Theoretical part presents the traditional approach to networking and packet processing, as well as an overview of how VPP is designed and the principles on which it operates. 
-Additionally, it introduces the testing scenarios that were used. 
 The Practical part describes the testing infrastructure, presents the results of various measurements, and provides an analysis of the findings.
 
 %---------------------------------------------------------------
@@ -84,7 +83,7 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
-\section{Presentation and Analysis of Results -> do závěru?}
+\section{Key Observations from Results}
 \input{text/chapters/analysis.tex}
 %---------------------------------------------------------------
 
