--- a/text/medium.tex
+++ b/text/medium.tex
@@ -1,13 +1,11 @@
-\chapter{Obsah příloh}
+\chapter{Contents of the attachment}
 % Contents of the attachment
 
 	\dirtree{%
 		.1 /.
-		.2 readme.txt\DTcomment{stručný popis obsahu média}.
-		.2 exe\DTcomment{adresář se spustitelnou formou implementace}.
+		.2 readme.txt\DTcomment{brief description of the attachment}.
 		.2 src.
-		.3 impl\DTcomment{zdrojové kódy implementace}.
-		.3 thesis\DTcomment{zdrojová forma práce ve formátu \LaTeX{}}.
-		.2 text\DTcomment{text práce}.
-		.3 thesis.pdf\DTcomment{text práce ve formátu PDF}.
+		.3 measurements\DTcomment{collected measurement outputs}.
+		.3 thesis\DTcomment{source code of the thesis in \LaTeX{}}.
+		.2 thesis.pdf\DTcomment{thesis text in PDF format}.
 	}
