--- a/text/text.tex
+++ b/text/text.tex
@@ -83,6 +83,8 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
+%Broken xelatex
+\newpage
 \section{Key Observations from Results}
 \input{text/chapters/analysis.tex}
 %---------------------------------------------------------------
