--- a/text/text.tex
+++ b/text/text.tex
@@ -60,7 +60,7 @@ The Practical part describes the testing infrastructure, presents the results of
 \input{text/chapters/pktgen.tex}
 
 %---------------------------------------------------------------
-\chapter{Pratical part}
+\chapter{Practical part}
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
@@ -69,7 +69,7 @@ The Practical part describes the testing infrastructure, presents the results of
 \input{text/chapters/infrastructure.tex}
 
 %---------------------------------------------------------------
-\section{Metodology}
+\section{Methodology}
 %---------------------------------------------------------------
 \input{text/chapters/metodology.tex}
 
