--- a/text/text.tex
+++ b/text/text.tex
@@ -90,7 +90,7 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 
 
-\chapter{Conclusion and Future work}
+\chapter{Conclusion and Future Work}
 The objective of this thesis was to analyze and compare the performance, latency, and energy efficiency of different VPP configurations with a traditional Linux-based router. 
 The work aimed to explore the theoretical advantages of VPP, design and implement a custom measurement infrastructure, define relevant traffic scenarios, 
 and determine the conditions under which VPP outperforms the Linux network stack.
